# compiler-mcp-server

./: .gitignore  .pre-commit-config.yaml  0_resolver.txt  COMPLETE_FIX_SUMMARY.md  CONTRIBUTING.md  GITHUB_SECRETS_SETUP.md  MCP_TESTING.md  Makefile  README.md  RESOLVER_FIX_SUMMARY.md  RESOLVER_ISSUE_FIX.md  RESOLVER_ISSUE_REPRODUCTION.md  TROUBLESHOOTING.md  claude_desktop_config.json  github_issue_tdd.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_mcp_tests.py  simple_resolver.py  solution_for_s1113.py  test-secrets.md  test_resolver_fix.py  test_resolver_fix_simple.py
.github/workflows/: ci.yml  openhands-resolver.yml
.openhands/: setup.sh
.openhands/microagents/: repo.md
.openhands/microagents/knowledge/: vectorization.md
.openhands/microagents/tasks/: add_test_case.md
tests/: conftest.py  test_mcp_connection.py  test_mcp_protocol.py  test_mcp_real_communication.py  test_resolver_workflow.py
